# andys-notebook

./: .gitignore  README.md  ai-donald-trump.ipynb  cracking-an-old-cipher.ipynb  election-predictions.ipynb  encryption.ipynb  exploring-fractals.ipynb  finding-images-within-images.ipynb  fractal-generator-multithreading.ipynb  generating-noise-images.html  generating-noise-images.ipynb  gradient-from-movie-poster.html  gradient-from-movie-poster.ipynb  how-to-parse-code.ipynb  image-effects.ipynb  image-processing.ipynb  index.html  multivariate-linear-regression.html  naive-bayes-india-state-prediction.ipynb  naive-bayes-mushroom-classification.html  orbital-mechanics.ipynb  orchestrate-on-vms.ipynb  recreating-sift-detector.ipynb  requirements.txt  sentence-generator.ipynb  simulating-pendulum.html  simulating-pendulum.ipynb  using-numpy-arrays.ipynb  virtual-synthesizer.ipynb  webscraping.ipynb  worker-script.py
.jupyter/: desktop-settings.json
.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
anutils-project/: pyproject.toml
anutils-project/src/anutils/: __init__.py
anutils-project/src/anutils/cv/: __init__.py  joining.py  rect.py  transform.py
anutils-project/src/anutils/mnp/pga2d/: __init__.py  draw_context.py
anutils-project/test/: test_data_path.py
archive/: cracking-an-old-cipher.ipynb  how-to-parse-code.ipynb  naive-bayes-india-state-prediction.ipynb  orchestrate-on-vms.ipynb  sentence-generator.ipynb
data/: .gitkeep  image-stitching-example.m4v  notes.csv
models/_support/: ai-donald-trump-vectorizer.json
(+16 files in other folders)
